secondpage.css
body {
    text-align: center;
    background-image: url('./files/bg-steam.jpg');
    color: #000000;
    max-width: 1280px;
    margin: auto;
    font-family: Arial, Helvetica, sans-serif;
    background-attachment: fixed; /* this prevents the bg image from scrolling */
    background-repeat: no-repeat; /* this removes the bg image tiling */
    background-size: cover; /* this scales the bg image */
}

#head {
    width: auto;
    background-color: #807f7d;
    margin-left: auto;
    margin-right: auto;
    border: 4px solid #000000;
    border-radius: 5px;
}

h1,
h2,
h3 {
    font-family: Impact;
}

h3 {
    background-color: #a6a3a2;
    border: 4px solid #000000;
    margin-top: 5px;
    padding: 5px 0px 5px 0px;
    border-radius: 5px;
    border: 4px solid #000000;
}

.homebutton {
    border-radius: 4px;
    background-color: #c2bebe;
}

a:link,
a:visited {
    color: #000000;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
}

.container1 {
    text-align: left;
    background-color: #ffffff;
    margin-top: 0px;
    border-radius: 5px;
    border: 4px solid #000000;
    padding: 5px;
}

.paragraph1 {
    padding: 20px;
}

.aside1 {
    display: inline;
    float: left;
    width: 15%;
    padding-left: 15px;
    margin-left: 15px;
    font-style: italic;
    text-align: left;
    background-color: lightgray;
}

